--- a/index.html
+++ b/index.html
@@ -510,5 +510,7 @@
         <!--Footer-->
         <script src="https://kit.fontawesome.com/a076d05399.js"></script> 
         <script src="./js/myMap.js"></script>
+        <!--Hover for mobile version-->
+        <script src="./js/hover.js"></script>
     </body>
 </html>
