--- a/index.html
+++ b/index.html
@@ -224,51 +224,27 @@
                             
                             <div class="gallery__card">
                                 <span class="gallery-item-text gallery-text">Посмотреть</span>
-                            <img
-                                class="gallery__card__pic"
-                                src="https://images.unsplash.com/photo-1593460354583-4224ab273cfe?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1973&q=80"
-                                alt="BMW"
-                            />
+                                <img class="gallery__card__pic" src="./img/gallery1.jpg" alt=""/>
                             </div>
                             <div class="gallery__card">
                                 <span class="gallery-item-text gallery-text">Посмотреть</span>
-                            <img
-                                class="gallery__card__pic"
-                                src="https://images.unsplash.com/photo-1546518071-fddcdda7580a?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1964&q=80"
-                                alt="Mercedes"
-                            />
+                                <img class="gallery__card__pic" src="./img/gallery2.jpg" alt=""/>
                             </div>
                             <div class="gallery__card">
                                 <span class="gallery-item-text gallery-text">Посмотреть</span>
-                            <img
-                                class="gallery__card__pic"
-                                src="https://images.unsplash.com/photo-1559416523-140ddc3d238c?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2051&q=80"
-                                alt="Toyota"
-                            />
+                                <img class="gallery__card__pic" src="./img/gallery3.jpg" alt=""/>
                             </div>
                             <div class="gallery__card">
                                 <span class="gallery-item-text gallery-text">Посмотреть</span>
-                            <img
-                                class="gallery__card__pic"
-                                src="https://images.unsplash.com/photo-1611396058741-1d570a4fcf95?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2070&q=80"
-                                alt="Mitsubisi"
-                            />
+                                <img class="gallery__card__pic" src="./img/gallery4.jpg" alt=""/>
                             </div>
                             <div class="gallery__card">
                                 <span class="gallery-item-text gallery-text">Посмотреть</span>
-                            <img
-                                class="gallery__card__pic"
-                                src="https://images.unsplash.com/photo-1625037669052-7e033716f325?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2070&q=80"
-                                alt="KIA"
-                            />
+                                <img class="gallery__card__pic" src="./img/gallery5.jpg" alt=""/>
                             </div>
                             <div class="gallery__card">
                                 <span class="gallery-item-text gallery-text">Посмотреть</span>
-                            <img
-                                class="gallery__card__pic"
-                                src="./img/vertical.jpg"
-                                alt="HAVAL"
-                            />
+                                <img class="gallery__card__pic" src="./img/gallery6.jpg" alt=""/>
                             </div>
                         </div>
             
